--- a/translator3000.config
+++ b/translator3000.config
@@ -38,13 +38,34 @@ retry_base_delay=20
 # Multithreading Settings
 # -----------------------
 # Default number of worker threads for CSV processing
-csv_max_workers=4
+csv_max_workers=6
 
 # Default number of worker threads for XML processing
-xml_max_workers=4
+xml_max_workers=6
 
 # Minimum number of rows/elements required to enable multithreading
 multithreading_threshold=2
+
+# Translation Service Settings
+# ----------------------------
+# Translation service preference order (comma-separated)
+# Available services: deep_translator, googletrans, libretranslate
+# Services are tried in order until one succeeds
+# 
+# PERFORMANCE COMPARISON:
+#   - deep_translator:  ~4.6 translations/sec (fastest)
+#   - googletrans:      ~4.0 translations/sec (good)  
+#   - libretranslate:   ~1.0 translations/sec (slower, but privacy-friendly)
+#
+# RECOMMENDED ORDER: fast services first, privacy-focused services as fallback
+translation_services=deep_translator,googletrans,libretranslate
+
+# LibreTranslate API endpoint (change if using self-hosted instance)
+libretranslate_url=https://libretranslate.com/translate
+
+# LibreTranslate API key (optional - leave empty for public API)
+# Get a key from https://libretranslate.com/ for higher rate limits
+libretranslate_api_key=
 
 # Performance Settings
 # --------------------
