Added support for libretranslate Docker image on localhost

--- a/translator3000.config
+++ b/translator3000.config
@@ -53,14 +53,32 @@ multithreading_threshold=2
 # Services are tried in order until one succeeds
 # 
 # PERFORMANCE COMPARISON:
-#   - deep_translator:  ~4.6 translations/sec (fastest)
-#   - googletrans:      ~4.0 translations/sec (good)  
-#   - libretranslate:   ~1.0 translations/sec (slower, but privacy-friendly)
+#   - localhost libretranslate: ~8-15 translations/sec (fastest when available)
+#   - deep_translator:          ~4.6 translations/sec (fast, cloud-based)
+#   - googletrans:              ~4.0 translations/sec (good, cloud-based)  
+#   - remote libretranslate:    ~1.0 translations/sec (slower, but privacy-friendly)
 #
-# RECOMMENDED ORDER: fast services first, privacy-focused services as fallback
+# RECOMMENDED ORDER: Local services first, then fast cloud services, remote privacy services as fallback
 translation_services=deep_translator,googletrans,libretranslate
 
-# LibreTranslate API endpoint (change if using self-hosted instance)
+# LibreTranslate localhost auto-detection
+# ----------------------------------------
+# Enable automatic detection of local LibreTranslate instance
+# If localhost:5000 is responding, it will be prioritized over other services
+libretranslate_localhost_enabled=true
+
+# Port to check for local LibreTranslate instance
+libretranslate_localhost_port=5000
+
+# Timeout for localhost detection check (in seconds)
+libretranslate_localhost_timeout=2
+
+# LibreTranslate API endpoints
+# ----------------------------
+# Local LibreTranslate endpoint (Docker default)
+libretranslate_localhost_url=http://localhost:5000/translate
+
+# Remote LibreTranslate endpoint (fallback when localhost unavailable)
 libretranslate_url=https://libretranslate.com/translate
 
 # LibreTranslate API key (optional - leave empty for public API)
